--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
     font-size: 75px;
     text-transform: uppercase;
 
-    border-radius: 15px;
+    border-radius: px;
     cursor: pointer;
     user-select: none;
     -moz-user-select: none;
@@ -44,7 +44,7 @@
 
 .game-view-square:hover { background-color: #eee}
 
-.game-view-square:nth-child(-n + 6) { border-bottom: 15px solid brown}
+.game-view-square:nth-child(-n + 6) { border-bottom: 15px solid red}
 
 .game-view-square:nth-child(3n + 1),
-.game-view-square:nth-child(3n + 2) {border-right: 15px solid brown}
+.game-view-square:nth-child(3n + 2) {border-right: 15px solid red}
