--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+}
 #game-view{
     width: 500px;
     margin: 0 auto;
@@ -11,6 +15,8 @@
     font-weight: bold;
     text-align: center;
     background-color: #eee;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(250,250,250,1) 0%, rgba(0,212,255,1) 75%);
 }
 
 #game-view-squares{
@@ -19,6 +25,30 @@
     flex-wrap: wrap;
     padding: 25px;
     box-sizing: border-box;
+
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(250,250,250,1) 0%, rgba(0,212,255,1) 75%);
+}
+
+.game-view-buttons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px;
+}
+
+.game-view-buttons button{
+    background-color: blueviolet;
+    color: aliceblue;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.game-view-buttons button:hover{
+    background-color: red;
 }
 
 .game-view-square{
@@ -48,3 +78,10 @@
 
 .game-view-square:nth-child(3n + 1),
 .game-view-square:nth-child(3n + 2) {border-right: 15px solid red}
+
+@media only screen and (max-width : 1200px) {
+   #game-view{
+       box-sizing: border-box;
+       width: 90vw;
+   } 
+}
